web/book/tests/snapshots/snapshot__tests__prql__examples__list-equivalence-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect salary\n"
---
SELECT
  salary
FROM
  employees

