web/book/tests/snapshots/snapshot__tests__prql__examples__list-equivalence-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\nderive gross_cost = gross_salary + benefits_cost\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees

